--- a/tex/algos.tex
+++ b/tex/algos.tex
@@ -765,7 +765,7 @@ R and R* tree codes, we will employ them for this work.
 
 \section{Summary}
 With the concept of the Voronoi diagram, basic graph theory, and spatial index trees, 
-this chapter presented the foundations on which the path-mesh calculation and path-finding
+this chapter presented the foundations on which the path mesh calculation and path-finding
 algorithm of this work will be based. The following chapter will review different kinds
 of path-finding methods and use parts of these to construct a bespoke method which
 is suitable for the angular movement of triple-axis spectrometers.
