--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -65,6 +65,8 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		APSP		 & \underline{A}ll \underline{P}airs \underline{S}hortest \underline{P}ath \cite[pp. 309-320]{Erickson2019}. \tabularnewline
 		\hline
+		CAD              & \underline{C}omputer \underline{A}ided \underline{D}esign. \tabularnewline
+		\hline
 		CGAL             & \underline{C}omputational \underline{G}eometry \underline{A}lgorithms \underline{L}ibrary \cite{web_cgal}. \tabularnewline
 		\hline
 		CLI              & \underline{C}ommand \underline{L}ine \underline{I}nterface. \tabularnewline
