--- a/tex/outlook.tex
+++ b/tex/outlook.tex
@@ -27,7 +27,7 @@ of a software with a similar goal had already been attempted before, in a tool n
 At its time, \textit{Paprika} gained relatively little traction, though, and this might be due to their approach 
 being less than optimal.
 Similar to our approach, they also construct a two-dimensional configuration space of allowed collision-free 
-angles of the instrument on a grid. But instead of using it to build a path-mesh of Voronoi bisectors along which 
+angles of the instrument on a grid. But instead of using it to build a path mesh of Voronoi bisectors along which 
 the instrument can move at the furthest distance of any obstacle, which is central to our approach, they 
 directly use the grid vertices for finding the shortest path. 
 This can lead to the shortest path leading directly along a wall.
