--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1799,10 +1799,20 @@
 
 @misc
 {
+	Choset2010,
+	author = {Howie Choset},
+	title = {{Robotic Motion Planning Lectures, RI 16-735 (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	year = {2007},
+	url = {https://www.cs.cmu.edu/~motionplanning/lecture/lecture.html},
+	note = "[Online; accessed 24-September-2021]"
+}
+
+
+@misc
+{
 	Choset2010_ch1,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures --- Chapter 1 (Lecture Notes)}},
-	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 1 (Lecture Notes). Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap1-Introduction_howie.pdf},
 	note = "[Online; accessed 24-September-2021]"
@@ -1813,8 +1823,7 @@
 {
 	Choset2010_ch2,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures --- Chapter 2: Bug Algorithms (Lecture Notes)}},
-	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 2: Bug Algorithms (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
 	year = {2010},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap2-Bug-Alg_howie.pdf},
 	note = "[Online; accessed 24-September-2021]"
@@ -1825,8 +1834,7 @@
 {
 	Choset2010_ch3,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures --- Chapter 3: Configuration Space (Lecture Notes)}},
-	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 3: Configuration Space (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap3-Config-Space_howie.pdf},
 	note = "[Online; accessed 24-September-2021]"
@@ -1837,8 +1845,7 @@
 {
 	Choset2010_ch4,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures --- Chapter 4: Potential Functions (Lecture Notes)}},
-	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 4: Potential Functions (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap4-Potential-Field_howie.pdf},
 	note = "[Online; accessed 24-September-2021]"
@@ -1849,8 +1856,7 @@
 {
 	Choset2010_ch5,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures --- Chapter 5: Roadmap Methods (Lecture Notes)}},
-	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 5: Roadmap Methods (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap5-RoadMap-Methods_howie.pdf},
 	note = "[Online; accessed 24-September-2021]"
@@ -1861,8 +1867,7 @@
 {
 	Choset2010_ch6,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures --- Chapter 6: Cell Decomposition (Lecture Notes)}},
-	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 6: Cell Decomposition (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap6-CellDecomp_howie.pdf},
 	note = "[Online; accessed 24-September-2021]"
@@ -1873,8 +1878,7 @@
 {
 	Choset2010_ch7,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures --- Chapter 7: Sample-Based Motion Planning (Lecture Notes)}},
-	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 7: Sample-Based Motion Planning (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap7-Prob-Planning_howie.pdf},
 	note = "[Online; accessed 24-September-2021]"
@@ -1885,8 +1889,7 @@
 {
 	Choset2010_ch8,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures --- Chapter 8: Localization, Mapping, SLAM and The Kalman Filter according to George (Lecture Notes)}},
-	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 8: Localization, Mapping, SLAM and The Kalman Filter according to George (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap8-Kalman-Mapping_howie.pdf},
 	note = "[Online; accessed 24-September-2021]"
@@ -1897,8 +1900,7 @@
 {
 	Choset2010_ch9,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures --- Chapter 9: Bayesian Approaches to Localization, Mapping, and SLAM (Lecture Notes)}},
-	note = {Carnegie Mellon University, Robotics Institute, Pennsylvania, USA},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 9: Bayesian Approaches to Localization, Mapping, and SLAM (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap9-Bayesian-Mapping_howie.pdf},
 	note = "[Online; accessed 24-September-2021]"
