some more discussion

--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -636,6 +636,7 @@ determined using the spatial index tree that has been generated in a previous st
 (section \ref{sec:walls_index_tree}).
 
 A demonstration of the effect of the cost functions is depicted in Fig. \ref{fig:path_finding_strategies}.
+More information on robot motion in potential function can be found in the notes by H. Choset \ref{Choset2010_ch4}.
 
 
 \begin{figure}[h]
