--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1801,10 +1801,10 @@
 {
 	Choset2010,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures, RI 16-735 (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	title = {{Robotic Motion Planning Lectures, RI 16-735 (Lecture Notes)}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/lecture.html},
-	note = "[Online; accessed 24-September-2021]"
+	note = "Carnegie Mellon University, Robotics Institute, Pennsylvania, USA. [Online; accessed 24-September-2021]"
 }
 
 
@@ -1812,10 +1812,10 @@
 {
 	Choset2010_ch1,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 1 (Lecture Notes). Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 1 (Lecture Notes)}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap1-Introduction_howie.pdf},
-	note = "[Online; accessed 24-September-2021]"
+	note = "Carnegie Mellon University, Robotics Institute, Pennsylvania, USA. [Online; accessed 24-September-2021]"
 }
 
 
@@ -1823,10 +1823,10 @@
 {
 	Choset2010_ch2,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 2: Bug Algorithms (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 2: Bug Algorithms (Lecture Notes)}},
 	year = {2010},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap2-Bug-Alg_howie.pdf},
-	note = "[Online; accessed 24-September-2021]"
+	note = "Carnegie Mellon University, Robotics Institute, Pennsylvania, USA. [Online; accessed 24-September-2021]"
 }
 
 
@@ -1834,10 +1834,10 @@
 {
 	Choset2010_ch3,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 3: Configuration Space (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 3: Configuration Space (Lecture Notes)}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap3-Config-Space_howie.pdf},
-	note = "[Online; accessed 24-September-2021]"
+	note = "Carnegie Mellon University, Robotics Institute, Pennsylvania, USA. [Online; accessed 24-September-2021]"
 }
 
 
@@ -1845,10 +1845,10 @@
 {
 	Choset2010_ch4,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 4: Potential Functions (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 4: Potential Functions (Lecture Notes)}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap4-Potential-Field_howie.pdf},
-	note = "[Online; accessed 24-September-2021]"
+	note = "Carnegie Mellon University, Robotics Institute, Pennsylvania, USA. [Online; accessed 24-September-2021]"
 }
 
 
@@ -1856,10 +1856,10 @@
 {
 	Choset2010_ch5,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 5: Roadmap Methods (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 5: Roadmap Methods (Lecture Notes)}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap5-RoadMap-Methods_howie.pdf},
-	note = "[Online; accessed 24-September-2021]"
+	note = "Carnegie Mellon University, Robotics Institute, Pennsylvania, USA. [Online; accessed 24-September-2021]"
 }
 
 
@@ -1867,10 +1867,10 @@
 {
 	Choset2010_ch6,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 6: Cell Decomposition (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 6: Cell Decomposition (Lecture Notes)}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap6-CellDecomp_howie.pdf},
-	note = "[Online; accessed 24-September-2021]"
+	note = "Carnegie Mellon University, Robotics Institute, Pennsylvania, USA. [Online; accessed 24-September-2021]"
 }
 
 
@@ -1878,10 +1878,10 @@
 {
 	Choset2010_ch7,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 7: Sample-Based Motion Planning (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 7: Sample-Based Motion Planning (Lecture Notes)}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap7-Prob-Planning_howie.pdf},
-	note = "[Online; accessed 24-September-2021]"
+	note = "Carnegie Mellon University, Robotics Institute, Pennsylvania, USA. [Online; accessed 24-September-2021]"
 }
 
 
@@ -1889,10 +1889,10 @@
 {
 	Choset2010_ch8,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 8: Localization, Mapping, SLAM and The Kalman Filter according to George (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 8: Localization, Mapping, SLAM and The Kalman Filter according to George (Lecture Notes)}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap8-Kalman-Mapping_howie.pdf},
-	note = "[Online; accessed 24-September-2021]"
+	note = "Carnegie Mellon University, Robotics Institute, Pennsylvania, USA. [Online; accessed 24-September-2021]"
 }
 
 
@@ -1900,10 +1900,10 @@
 {
 	Choset2010_ch9,
 	author = {Howie Choset},
-	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 9: Bayesian Approaches to Localization, Mapping, and SLAM (Lecture Notes), Carnegie Mellon University, Robotics Institute, Pennsylvania, USA}},
+	title = {{Robotic Motion Planning Lectures \cite{Choset2010} --- Chapter 9: Bayesian Approaches to Localization, Mapping, and SLAM (Lecture Notes)}},
 	year = {2007},
 	url = {https://www.cs.cmu.edu/~motionplanning/lecture/Chap9-Bayesian-Mapping_howie.pdf},
-	note = "[Online; accessed 24-September-2021]"
+	note = "Carnegie Mellon University, Robotics Institute, Pennsylvania, USA. [Online; accessed 24-September-2021]"
 }
 
 
